fix: allow email and username login to auto-create users like phone login
Frontend hints say email/username login will auto-create accounts if not
registered, but backend was throwing errors instead. Now matches phone login
behavior: creates new user if email/username not found.